--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -51,12 +51,56 @@
                 </LinearLayout>
         </LinearLayout>
 
+
+    <!-- TAGS CONTAINER UNDERNEATH BIO -->
+    <LinearLayout
+        android:id="@+id/profileTagList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_transparent_rec1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="35dp"
+            android:textColor="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="1"
+            android:shadowRadius="1"
+            android:text="Tags: "
+            android:paddingStart="5dp"
+            android:gravity="center|start"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/postTagsRecycle"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:scrollbars="horizontal"
+            android:overScrollMode="never"
+            android:padding="2dp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/userTagsRecycle"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:scrollbars="horizontal"
+            android:overScrollMode="never"
+            android:padding="2dp" />
+
+    </LinearLayout>
+
         <!-- Post Fragment -->
         <FrameLayout
             android:id="@+id/postFragmentDisplay"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_gravity="center"/>
+
 
         <!-- Interactions Bar -->
         <LinearLayout
