--- a/app/src/main/res/layout/adapter_search_result.xml
+++ b/app/src/main/res/layout/adapter_search_result.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="25dp"
     android:orientation="vertical"
     android:background="?attr/selectableItemBackground"
     android:padding="5dp">
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/searchResultItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="Username"
         android:textColor="@android:color/white"
         android:textSize="12sp" />
