--- a/app/src/main/res/layout/adapter_search_selected.xml
+++ b/app/src/main/res/layout/adapter_search_selected.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="25dp"
     android:orientation="horizontal"
-    android:padding="8dp"
-    android:layout_margin="4dp"
-    android:gravity="center_vertical">
+    android:background="?attr/selectableItemBackground"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/searchResultItem"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="Username"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
-        android:layout_marginEnd="8dp" />
+        android:textSize="12sp"
+        android:layout_marginEnd="5dp" />
 
     <ImageView
         android:id="@+id/removeIcon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/ic_close_white_24"
-        android:padding="2dp" />
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:src="@drawable/ic_close_white_24"/>
 </LinearLayout>
