--- a/app/src/main/res/layout/fragment_profile_view.xml
+++ b/app/src/main/res/layout/fragment_profile_view.xml
@@ -182,18 +182,35 @@
     </LinearLayout>
 
     <!-- TAGS CONTAINER UNDERNEATH BIO -->
-    <HorizontalScrollView
+    <LinearLayout
+        android:id="@+id/profileTagList"
         android:layout_width="match_parent"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:layout_height="25dp"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="1"
+            android:shadowRadius="1"
+            android:text="My Tags: "
+            android:gravity="center"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_tag"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </HorizontalScrollView>
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+
+            android:layout_weight="3"
+            android:orientation="horizontal"
+            android:scrollbars="horizontal"
+            android:overScrollMode="never"
+            android:padding="2dp" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/button_section"
