--- a/app/src/main/res/layout/adapter_posts_audio.xml
+++ b/app/src/main/res/layout/adapter_posts_audio.xml
@@ -6,7 +6,11 @@
     android:orientation="vertical"
     android:layout_gravity="center"
     android:gravity="center"
-    android:background="@drawable/background_dark_blue">
+    android:background="@drawable/background_dark_green">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 
     <ImageView
         android:id="@+id/postAudioBackground"
@@ -21,15 +25,16 @@
         android:id="@+id/audioSeekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
         android:visibility="visible"/>
 
     <!-- Play/Pause toggle button -->
     <ImageButton
         android:id="@+id/postAudioPlayPause"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:background="@android:color/transparent"
         android:src="@drawable/baseline_play_circle_filled_24"/>
