--- a/app/src/main/res/drawable/chatbox_active.xml
+++ b/app/src/main/res/drawable/chatbox_active.xml
@@ -1,17 +1,16 @@
+
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#1A8A2BE2" /> <!-- Light blueish-purple for other users -->
-            <corners android:radius="5dp" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-            <corners android:radius="5dp" />
-            <stroke
-                android:width="1dp"
-                android:color="#40FFFFFF" />
-        </shape>
-    </item>
+<item>
+    <shape android:shape="rectangle">
+        <corners
+            android:topLeftRadius="25dp"
+            android:topRightRadius="25dp"
+            android:bottomRightRadius="25dp"
+            android:bottomLeftRadius="25dp" />
+        <gradient
+            android:startColor="#A8E6A3"
+        android:endColor="#388E3C"
+        android:angle="270" />
+    </shape>
+</item>
 </layer-list>
