--- a/app/src/main/res/drawable/chatbox_inactive.xml
+++ b/app/src/main/res/drawable/chatbox_inactive.xml
@@ -1,17 +1,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#6DD34B21" /> <!-- Light blueish-purple for other users -->
-            <corners android:radius="5dp" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-            <corners android:radius="5dp" />
-            <stroke
-                android:width="1dp"
-                android:color="#40FFFFFF" />
+            <corners
+                android:topLeftRadius="25dp"
+                android:topRightRadius="25dp"
+
+                android:bottomRightRadius="25dp" />
+            <gradient
+                android:startColor="#DFF2EA"
+                android:endColor="#A8D5BA"
+                android:angle="270" />
         </shape>
     </item>
 </layer-list>
