--- a/app/src/main/res/drawable/chatbox_user.xml
+++ b/app/src/main/res/drawable/chatbox_user.xml
@@ -1,11 +1,17 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Base gradient background -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#33FFFFFF"/> <!-- Frosted glass effect -->
-            <corners android:radius="5dp"/>
-            <stroke
-                android:width="1dp"
-                android:color="#55FFFFFF"/>
+            <corners
+                android:topLeftRadius="25dp"
+                android:topRightRadius="25dp"
+                android:bottomLeftRadius="25dp"
+                />
+            <gradient
+                android:startColor="#A094E6"
+                android:endColor="#8A2BE2"
+                android:angle="270" />
         </shape>
     </item>
+
 </layer-list>
