--- a/app/src/main/res/layout/adapter_chatmsg_inactive.xml
+++ b/app/src/main/res/layout/adapter_chatmsg_inactive.xml
@@ -7,14 +7,19 @@
     android:orientation="horizontal">
 
     <!-- Sender's Profile -->
+
+    <!-- Message Bubble -->
     <ImageButton
         android:id="@+id/senderProfile"
-        android:layout_width="75dp"
-        android:layout_height="match_parent"
+        android:layout_width="64dp"
+        android:layout_height="39dp"
+        android:layout_gravity="bottom"
         android:background="@android:color/transparent"
         android:padding="15dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/navigation_profile_24"/>
+        android:scaleX="1.3"
+        android:scaleY="1.3"
+        android:src="@drawable/navigation_profile_24" />
 
     <LinearLayout
         android:layout_width="235dp"
@@ -22,38 +27,39 @@
         android:background="@drawable/chatbox_inactive"
         android:maxWidth="225dp"
         android:orientation="vertical"
-        android:padding="12dp">
+        android:paddingLeft="22dp"
+        android:paddingTop="5dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="2dp"
+        android:layout_gravity="bottom">
 
         <!-- Other Account's Username -->
         <TextView
             android:id="@+id/textMessageUsername"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="USERNAME"
-            android:textColor="#A02D0A"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+            android:textColor="@android:color/darker_gray"
+            android:textSize="8sp" />
 
         <!-- Sent Date from Other Account/User -->
         <TextView
-            android:id="@+id/textMessageDate"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="01/01/2000"
-            android:textColor="#A02D0A"
-            android:textSize="12sp"
-            android:textStyle="bold" />
-
-        <!-- Message Context for Other Account/User -->
-        <TextView
             android:id="@+id/textMessage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+
             android:text="This is a really long example of a message and how it would appear on the actual screen"
-            android:textColor="#AE5C42"
+            android:textColor="@color/black"
             android:textSize="12sp" />
 
+        <TextView
+            android:id="@+id/textMessageDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="01/01/2000"
+            android:textSize="8sp"
+            android:textColor="@android:color/darker_gray"
+            android:textStyle="italic" />
     </LinearLayout>
 
 </LinearLayout>
-
