--- a/app/src/main/res/layout/adapter_chatmsg_user.xml
+++ b/app/src/main/res/layout/adapter_chatmsg_user.xml
@@ -6,52 +6,61 @@
     android:gravity="end"
     android:orientation="horizontal">
 
+    <!-- Message Bubble Layout -->
     <LinearLayout
         android:layout_width="235dp"
         android:layout_height="wrap_content"
         android:background="@drawable/chatbox_user"
         android:maxWidth="225dp"
         android:orientation="vertical"
-        android:padding="12dp">
+        android:paddingRight="22dp"
+        android:paddingTop="5dp"
+        android:paddingLeft="12dp"
+        android:paddingBottom="2dp"
+        android:layout_gravity="bottom">
 
         <!-- Other Account's Username -->
         <TextView
             android:id="@+id/textMessageUsername"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="USERNAME"
-            android:textColor="#929090"
-            android:textSize="12sp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="8sp"
+            android:gravity="end"
             android:textStyle="bold" />
 
         <!-- Sent Date from User -->
         <TextView
-            android:id="@+id/textMessageDate"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="01/01/2000"
-            android:textColor="#929090"
-            android:textSize="12sp"
-            android:textStyle="bold" />
-
-        <!-- Message Context for User -->
-        <TextView
             android:id="@+id/textMessage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="This is a really long example of a message and how it would appear on the actual screen"
-            android:textColor="@color/colorOnSurface"
+            android:textColor="@color/black"
+
             android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/textMessageDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="01/01/2000"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="8sp"
+            android:gravity="end"
+            android:textStyle="italic" />
     </LinearLayout>
 
     <!-- Sender's Profile -->
     <ImageButton
         android:id="@+id/senderProfile"
-        android:layout_width="75dp"
-        android:layout_height="match_parent"
+        android:layout_width="67dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
         android:background="@android:color/transparent"
         android:padding="15dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/navigation_profile_24"/>
-
+        android:scaleX="1.3"
+        android:scaleY="1.3"
+        android:src="@drawable/navigation_profile_24" />
 </LinearLayout>
