--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -26,7 +26,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/white_translucency_gradient_horizontal_bottom"
+                    android:background="@drawable/white_translucency_gradient_horizontal"
                     android:orientation="vertical">
 
                         <TextView
@@ -40,13 +40,13 @@
                             android:textSize="10dp"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/postCaption"
-                            android:layout_width="match_parent"
-                            android:layout_height="25dp"
-                            android:text="CAPTION"
-                            android:textColor="@color/black"
-                            android:textSize="18dp" />
+                    <TextView
+                        android:id="@+id/postCaption"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="CAPTION"
+                        android:textColor="#000000"
+                        android:textSize="12dp" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/userTagsRecycle"
@@ -67,7 +67,7 @@
         android:id="@+id/profileTagList"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="@drawable/white_translucency_gradient_horizontal_bottom"
+        android:background="@drawable/white_translucency_gradient_tags"
         android:orientation="horizontal">
 
         <TextView
@@ -89,7 +89,7 @@
             android:orientation="horizontal"
             android:scrollbars="horizontal"
             android:overScrollMode="never"
-            android:padding="2dp" />
+            android:padding="0dp" />
 
     </LinearLayout>
 
