--- a/app/src/main/res/layout/adapter_tags_user.xml
+++ b/app/src/main/res/layout/adapter_tags_user.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="20dp"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"
     android:layout_margin="5dp"
-    android:background="@drawable/background_transparent_round4">
+    android:background="@drawable/background_transparent_round4"
+    android:backgroundTint="#E0954C"
+    android:orientation="horizontal"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/userTagName"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Username"
-        android:textColor="@color/black"
-        android:textSize="10sp"/>
+        android:textColor="@color/white"
+        android:textSize="10sp" />
 
 </LinearLayout>
