UI Push: New emoji backgrounds were added to the login, a new splash screen, and the main app.
Main Backgrounds:
- EmojiBackgroundView.java in package utilities generates one of 3 patterns for the background, adds transparency overlay, and blur.

- Emoji background currently applies to Home, Profile, Messages, Chatroom, and Search fragments.

Login Screen:
- The grid pattern from the emoji background generator refreshes every second

Splash Screen:
- Custom emoji generator class for splash screen which simulates icons falling like leaves.

- Chat  elements on messages page was edited

--- a/app/src/main/res/layout/fragment_chatroom.xml
+++ b/app/src/main/res/layout/fragment_chatroom.xml
@@ -1,21 +1,31 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/background_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <!-- Emoji Background Layer -->
+    <com.soundpaletteui.Views.EmojiBackgroundView
+        android:id="@+id/emojiBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.Messages.MessageFragment"
     android:orientation="vertical"
-    android:background="@drawable/background_dark_blue">
+    android:background="@android:color/transparent">
 
     <!-- Edit Chatroom and Leave Chatroom Buttons -->
     <TextView
         android:id="@+id/chatroomName"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@drawable/white_translucency_gradient_square"
+        android:background="@drawable/white_translucency_gradient_horizontal_chattab"
         android:gravity="center"
         android:text="\@USERNAME"
-        android:textColor="#3937D8"
+        android:textColor="#012E49"
         android:textSize="20dp"
         android:textStyle="bold" />
 
@@ -103,6 +113,7 @@
             android:textSize="10dp"
             android:textColor="@android:color/white" />
 
+
     </LinearLayout>
 
-</LinearLayout>
+</LinearLayout></FrameLayout>
