--- a/app/src/main/res/drawable/chatbox_user.xml
+++ b/app/src/main/res/drawable/chatbox_user.xml
@@ -1,17 +1,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Base gradient background -->
     <item>
         <shape android:shape="rectangle">
             <corners
                 android:topLeftRadius="25dp"
                 android:topRightRadius="25dp"
-                android:bottomLeftRadius="25dp"
-                />
+                android:bottomLeftRadius="25dp" />
             <gradient
-                android:startColor="#A094E6"
-                android:endColor="#8A2BE2"
+                android:startColor="#FFFFFF"
+                android:endColor="#9370DB"
                 android:angle="270" />
         </shape>
     </item>
-
 </layer-list>
