--- a/app/src/main/res/drawable/edit_buttons.xml
+++ b/app/src/main/res/drawable/edit_buttons.xml
@@ -4,11 +4,12 @@
             <corners
                 android:topLeftRadius="15dp"
                 android:topRightRadius="15dp"
+                android:bottomLeftRadius="15dp"
                 android:bottomRightRadius="15dp" />
             <gradient
                 android:startColor="#FFFFFF"
-                android:endColor="#BBDEFB"
-                android:angle="270" />
+            android:endColor="#FFF9C4"
+            android:angle="270" />
         </shape>
     </item>
 </layer-list>
