--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/background_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <!-- Emoji Background Layer -->
+    <com.soundpaletteui.Views.EmojiBackgroundView
+        android:id="@+id/emojiBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,6 +42,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
             android:layout_weight="2">
@@ -308,3 +319,4 @@
         android:layout_height="match_parent" />
 
 </LinearLayout>
+</FrameLayout>
