--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -58,59 +58,124 @@
     </LinearLayout>
 
     <!-- Replace CheckBoxes with RadioGroup -->
-    <RadioGroup
-        android:id="@+id/searchOptionsGroup"
+    <LinearLayout
+        android:id="@+id/button_section"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="45dp"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:paddingStart="50dp">
+        android:padding="8dp">
 
-        <RadioButton
-            android:id="@+id/searchUsersRadio"
+        <FrameLayout
+            android:id="@+id/frame_posts"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/round_button_shape"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless">
+
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gif_posts"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/posts_profile" />
+
+            <TextView
+                android:id="@+id/postsToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:text="POSTS"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/frame_tags"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/round_button_shape"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless">
+
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gif_tags"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/saved_profile" />
+
+            <TextView
+                android:id="@+id/tagsToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:text="TAGS"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </FrameLayout>
+        <FrameLayout
+            android:id="@+id/frame_users"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/round_button_shape"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless">
+
+            <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gif_users"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/saved_profile" />
+
+            <TextView
+                android:id="@+id/usersToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:text="USERS"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/trending_range_select"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal">
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Users"
-            android:textColor="@color/white"
-            android:buttonTint="@color/white"
-            android:textSize="5pt"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="2"
-            android:shadowDy="1"
-            android:shadowRadius="1"
-            android:paddingRight="30dp" />
+            android:text="Trending"
+            android:textSize="20dp"
+            android:layout_gravity="center"/>
 
-        <RadioButton
-            android:id="@+id/searchPostsRadio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tags"
-            android:textColor="@color/white"
-            android:buttonTint="@color/white"
-            android:textSize="5pt"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="2"
-            android:shadowDy="1"
-            android:shadowRadius="1"
-            android:paddingRight="30dp" />
+        <Spinner
+            android:id="@+id/trending_range"
+            android:layout_width="200dp"
+            android:layout_height="@dimen/spinner_height"
+            android:layout_marginTop="12dp"
+            android:textSize="@dimen/row_text"
+            android:background="@color/white"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"/>
 
-        <RadioButton
-            android:id="@+id/searchCaptionsRadio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Captions"
-            android:textColor="@color/white"
-            android:buttonTint="@color/white"
-            android:textSize="5pt"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="2"
-            android:shadowDy="1"
-            android:shadowRadius="1" />
-    </RadioGroup>
-
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/postFragment"
         android:layout_width="match_parent"
