--- a/app/src/main/res/layout/fragment_chatroom.xml
+++ b/app/src/main/res/layout/fragment_chatroom.xml
@@ -10,6 +10,7 @@
         android:id="@+id/emojiBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -62,6 +63,18 @@
     </LinearLayout>
 
 
+    <!-- Display no messages if none -->
+    <TextView
+        android:id="@+id/noMessageDisplay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No comments yet."
+        android:textAlignment="center"
+        android:padding="16dp"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14sp"
+        android:visibility="gone"
+        android:alpha="0" />
 
 
     <!-- RecyclerView to display messages -->
