Fixed the CommentAdapter to view the commenter's ProfileViewFragment

--- a/app/src/main/res/layout/adapter_posts.xml
+++ b/app/src/main/res/layout/adapter_posts.xml
@@ -55,6 +55,7 @@
                             android:orientation="horizontal"
                             android:scrollbars="horizontal"
                             android:overScrollMode="never"
+                            android:paddingTop="0dp"
                             android:padding="2dp" />
 
                 </LinearLayout>
